[project]
name = "textchat"
version = "0.1.4"
authors = [
    { name = "Matthew Blau", email = "mrb1105@gmail.com" },
]
dependencies = ["textual >=0.66.0", "irc >=20.4.0", "textual-autocomplete >=2.1.0b0","SQLAlchemy >=2.0.30", "aiosqlite >=0.20.0"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
textchat = ["*.py", "*.tcss"]
[project.scripts]
textchat = "textchat:ircchat"
